<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header"
        app:icon="@drawable/ic_msg">

        <EditTextPreference
            app:key="signature"
            app:title="your signature"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header"
        app:icon="@drawable/ic_sync">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

<PreferenceCategory app:title="Notifications"
    app:icon="@drawable/ic_notifications"/>
    <SwitchPreferenceCompat
        app:key="notification"
        app:title="Recibir Notificaciones"
        app:summaryOn="Notificaiones habilitadas"
        app:summaryOff="Notificaciones deshabilitadas"/>

</PreferenceScreen>